-Added setting "block_allow_scaled" which allows playback of scaled block actions (false by default).
-Added setting "start_instantly" to start recording instantly instead of waiting for movement or second command (false by default) (thanks to Antimality for suggestion).
-Added setting "assign_player_name" to assign recorded player names to a recording (false by default).
-Settings are now divided into 3 categories - recording, playback and advanced.
-Merged "/mocap scenes list_elements" into "/mocap scenes list" and "/mocap scenes element_info" into "/mocap scenes info".
-Split "player_info" modifier into "player_name" and "player_skin".
-Removed position offset arguments from "/mocap scenes add_to".
-Replaced command "/mocap recording state" with "/mocap recording list".
-Replaced settings "trackVehicleEntities", "trackItemEntities" and "trackOtherEntities" with "track_entities".
-Replaced settings "playVehicleEntities", "playItemEntities" and "playOtherEntities" with "play_entities".
-Replaced "trackPlayedEntities" setting with "prevent_tracking_played_entities" (true by default) which better represents what it's actually doing.
-Replaced "recordPlayerDeath" setting with "on_death" which defines recording behavior on player death and unlike old setting actually works (end_recording by default).
-Replaced "recordingSync" setting with "/mocap misc sync" command.
-Renamed settings: "playing_speed" to "playback_speed", "play_block_actions" to "block_actions_playback", "set_block_states" to "block_initialization".
-Changed "entities_after_playback" setting type from integer to enum.
-Changed settings, command names and command arguments naming convention from lower camel case to snake case.
-Added "for_all_players" optional argument to "/mocap playback stop_all".
-Added "instant_save" optional argument to "/mocap recording start" to instantly save recording after stopping it (thanks to Antimality for suggesiton).