@@ -4,15 +4,16 @@
   "mocap.recording.start.waiting_for_decision": "Your recording of this player is waiting for decision!",
   "mocap.recording.start.waiting_for_decision.tip": "Enter this command again to start anyway",
   "mocap.recording.start.player_not_found": "Player not found!",
-  "mocap.recording.start.player_not_specified": "Player wasn't specified! Add nickname to command or execute it as a player",
+  "mocap.recording.start.player_not_specified.with_tip": "Player wasn't specified! Add nickname to command or execute it as a player",
+  "mocap.recording.start.player_not_specified.no_tip": "Player wasn't specified!",
   "mocap.recording.start.waiting_for_action.self": "Take any action or use \"/mocap recording start\" again to start recording...",
   "mocap.recording.start.waiting_for_action.another_player": "Waiting for player action. Use \"/mocap recording start\" again to start recording right now...",
   "mocap.recording.start.recording_started": "Recording started...",
   "mocap.recording.start.error": "§lError:§r failed to start recording!",
 
   "mocap.recording.stop.stopped": "Recording stopped - waiting for decision...",
-  "mocap.recording.stop.stopped.tip_stop": "Use \"/mocap recording save <recording_name>\" to save it\nor \"/mocap recording stop\" to discard it.",
-  "mocap.recording.stop.stopped.tip_discard": "Use \"/mocap recording save <recording_name>\" to save it\nor \"/mocap recording discard\" to discard it.",
+  "mocap.recording.stop.stopped.stop_tip": "Use \"/mocap recording save <recording_name>\" to save it\nor \"/mocap recording stop\" to discard it.",
+  "mocap.recording.stop.stopped.discard_tip": "Use \"/mocap recording save <recording_name>\" to save it\nor \"/mocap recording discard\" to discard it.",
   "mocap.recording.stop.canceled": "Recording canceled - no longer waiting for action",
   "mocap.recording.stop.quick_discard.disabled": "Recording already stopped!",
   "mocap.recording.stop.quick_discard.disabled.tip": "Use \"/mocap recording discard\" to discard it\nor change quick discard mode in the settings.",
@@ -230,6 +231,7 @@
   "mocap.settings.info.about.allow_ghosts": "Allows usage of ghosts (invisible, server-side only players) when using \"player_as_entity\" modifier. They're created in order to perform actions that can't be done by a non-player entity.",
   "mocap.settings.info.about.experimental_release_warning": "Warns players when a server is using experimental (alpha or beta) release of Motion Capture mod",
   "mocap.settings.info.about.pretty_scene_files": "Makes scene JSON files look pretty, at cost of slightly bigger file size (scene files are very small anyway, so it shouldn't be a problem unless you're using punch cards for storing them)",
+  "mocap.settings.info.about.show_tips": "Gives tips that may help with using the mod",
 
   "mocap.settings.info.current_value": "§lCurrent value:§r %s",
   "mocap.settings.info.default_value": "§lDefault value:§r %s",
