@@ -4,15 +4,16 @@
   "mocap.recording.start.waiting_for_decision": "Twoje nagranie tego gracza czeka na decyzję!",
   "mocap.recording.start.waiting_for_decision.tip": "Wprowadź to polecenie ponownie aby rozpocząć mimo to",
   "mocap.recording.start.player_not_found": "Nie znaleziono gracza!",
-  "mocap.recording.start.player_not_specified": "Nie określono gracza! Dodaj nazwę gracza do polecenia lub wykonaj ją jako gracz",
+  "mocap.recording.start.player_not_specified.with_tip": "Nie określono gracza! Dodaj nazwę gracza do polecenia lub wykonaj ją jako gracz",
+  "mocap.recording.start.player_not_specified.no_tip": "Nie określono gracza!",
   "mocap.recording.start.waiting_for_action.self": "Wykonaj jakąkolwiek akcję lub użyj \"/mocap recording start\" ponownie, aby zacząć nagrywanie...",
   "mocap.recording.start.waiting_for_action.another_player": "Czekanie na akcję gracza. Użyj \"/mocap recording start\" ponownie, aby zacząć nagrywanie już teraz...",
   "mocap.recording.start.recording_started": "Nagrywanie rozpoczęte...",
   "mocap.recording.start.error": "§lBłąd:§r nie udało się rozpocząć nagrywania!",
 
   "mocap.recording.stop.stopped": "Nagrywanie zatrzymane - czekanie na decyzję...",
-  "mocap.recording.stop.stopped.tip_stop": "Użyj \"/mocap recording save <nazwa_nagrania>\" aby je zapisać\nlub \"/mocap recording stop\" aby je odrzucić.",
-  "mocap.recording.stop.stopped.tip_discard": "Użyj \"/mocap recording save <nazwa_nagrania>\" aby je zapisać\nlub \"/mocap recording discard\" aby je odrzucić.",
+  "mocap.recording.stop.stopped.stop_tip": "Użyj \"/mocap recording save <nazwa_nagrania>\" aby je zapisać\nlub \"/mocap recording stop\" aby je odrzucić.",
+  "mocap.recording.stop.stopped.discard_tip": "Użyj \"/mocap recording save <nazwa_nagrania>\" aby je zapisać\nlub \"/mocap recording discard\" aby je odrzucić.",
   "mocap.recording.stop.canceled": "Nagranie anulowane - koniec czekania na akcję",
   "mocap.recording.stop.quick_discard.disabled": "Nagrywanie już zatrzymane!",
   "mocap.recording.stop.quick_discard.disabled.tip": "Użyj \"/mocap recording discard\" aby je odrzucić\nlub zmień tryb szybkiego odrzucania w ustawieniach.",
@@ -230,6 +231,7 @@
   "mocap.settings.info.about.allow_ghosts": "Zezwala na użycie duchów (niewidzialny graczy, istniejących tylko po stronie serwer) gdy został użyty modyfikator \"player_as_entity\". Są one tworzone w celu wykonywania akcji niemożliwych do wykonania przez byty nie będące graczami.",
   "mocap.settings.info.about.experimental_release_warning": "Ostrzega graczy, gdy serwer używa eksperymentalnego (alfa lub beta) wydania Motion Capture",
   "mocap.settings.info.about.pretty_scene_files": "Sprawia, że pliki JSON scen wyglądają ładnie, kosztem lekko większych plików (pliki scen są i tak bardzo małe, więc nie powinno to stanowić problemu, chyba że używasz kart perforowanych do ich przechowywania)",
+  "mocap.settings.info.about.show_tips": "Daje wskazówki które mogą pomóc w korzystaniu z moda",
 
   "mocap.settings.info.current_value": "§lObecna wartość:§r %s",
   "mocap.settings.info.default_value": "§lDomyślna wartość:§r %s",
