@@ -4,14 +4,15 @@
   "mocap.recording.start.waiting_for_decision": "你對這位玩家的錄製正在等待決定！",
   "mocap.recording.start.waiting_for_decision.tip": "再次輸入此指令以強制開始",
   "mocap.recording.start.player_not_found": "找不到玩家！",
-  "mocap.recording.start.player_not_specified": "未指定玩家！將暱稱加入指令中，或以玩家身分執行指令",
+  "mocap.recording.start.player_not_specified.with_tip": "未指定玩家！將暱稱加入指令中，或以玩家身分執行指令",
+  "mocap.recording.start.player_not_specified.no_tip": "未指定玩家！",
   "mocap.recording.start.waiting_for_action.self": "採取任何動作或再次使用「/mocap recording start」開始錄製...",
   "mocap.recording.start.recording_started": "錄製已開始...",
   "mocap.recording.start.error": "§l錯誤：§r 無法開始錄製！",
 
   "mocap.recording.stop.stopped": "錄製已停止 - 等待決定...",
-  "mocap.recording.stop.stopped.tip_stop": "使用「/mocap recording save <錄製名稱>」儲存，\n或使用「/mocap recording stop」捨棄。",
-  "mocap.recording.stop.stopped.tip_discard": "使用「/mocap recording save <錄製名稱>」儲存，\n或使用「/mocap recording discard」捨棄。",
+  "mocap.recording.stop.stopped.stop_tip": "使用「/mocap recording save <錄製名稱>」儲存，\n或使用「/mocap recording stop」捨棄。",
+  "mocap.recording.stop.stopped.discard_tip": "使用「/mocap recording save <錄製名稱>」儲存，\n或使用「/mocap recording discard」捨棄。",
   "mocap.recording.stop.canceled": "錄製已取消 - 不再等待動作",
   "mocap.recording.stop.quick_discard.disabled": "錄製已停止！",
   "mocap.recording.stop.quick_discard.disabled.tip": "使用「/mocap recording discard」捨棄，\n或在設定中更改快速捨棄模式。",
